--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <body>
         <center><img class="img_logo" src="logo_livetell.jpg" alt="">
         <h3>Livetell - Encurtando distâncias!</h3>
-        <p>Nosso site está em manutenção. Mas logo estaremos de volta, com uma cara nova, trazendo todas as
+        <p>Nosso site está em manutenção. Mas logo estaremos de volta, trazendo todas as
             informações sobre nossos produtos e serviços :)
         </p>
         <p>Para mais informações, entre em contato conosco, através do nosso e-mail ou telefone (WhatsApp)</p></center>
