--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
     <body>
         <center><img class="img_logo" src="logo_livetell.jpg" alt="">
         <h3>Livetell - Encurtando distâncias!</h3>
+        <p>Empresa de telecomunicações especializada em:</p>
+        <ul>
+            <li>Soluções para internet rural de alta velocidade telefonia rural sem fio;</li>
+            <li>Câmeras de segurança;</li>
+            <li>TV digital via satélite e terrestre;</li>
+            <li>Serviços em telecom e informática</li>
+        </ul>
         <p>Nosso site está em manutenção. Mas logo estaremos de volta, trazendo todas as
             informações sobre nossos produtos e serviços :)
         </p>
