--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             span{
                 color: #1034d3;
             }
+            
+            ul{
+                list-style: none
+            }
         </style>
     </head>
     <body>
