--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             ul{
                 list-style: none
             }
+
+            img_logo {
+                height: 200px;
+            }
         </style>
     </head>
     <body>
