--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 list-style: none
             }
 
-            img_logo {
+            .img_logo {
                 height: 200px;
             }
         </style>
