change flickr url

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <a class="nav-link link-item-lista-menu" onclick="redirecionaSiteMercadoLivre('');">Livetell no Mercado livre</a>
               </li>
               <li id="opc_galeria" class="nav-item item-lista-menu" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <a class="nav-link link-item-lista-menu" href="" target="_blank">Galeria</a>
+                <a class="nav-link link-item-lista-menu" href="https://www.flickr.com/people/191720900@N06/" target="_blank">Galeria</a>
               </li>
           </ul>
         </div>
